--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;800&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,500;1,600&family=Mulish:ital,wght@0,200;0,300;0,600;1,200;1,500;1,600&display=swap');
 
 
@@ -7,7 +8,81 @@
 *{
     margin:  0;
     padding: 0;
+    list-style: none;
+    text-decoration:none;
 }
+:root{
+    --font-primary: "Baloo 2", serif;
+    --font-secundary:"Josefin Sans", serif;
+    --font-action: "Mulish", serif;
+}
+
+.hamburger{
+   /* background-color: red;*/
+    width: 2rem;
+    height: 3rem;
+    position: fixed;
+    z-index: 100;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+}
+
+.show-menu .hamburger{
+    right: 16rem;
+}
+
+.line{
+    width: 100%;
+    height: .1rem;
+    background-color: #fff;
+    box-shadow: 0.1rem 0.1rem 1px #000;
+    transition: transform 1s;
+}
+
+.show-menu #line1{
+    transform: rotate(45deg) translate(.3rem, .45rem);
+    
+}
+
+.show-menu #line2{
+    opacity: 0;
+    visibility: hidden;
+}
+.show-menu #line3{
+    transform: rotate(-45deg) translate(.3rem, -.45rem);
+    
+}
+.hamburger span{
+    position: absolute;
+    left: 3rem;
+    height: 2rem;
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #a044ff;
+    color: #ffffff;
+    font-family: var(--font-action);
+    opacity: 0;
+}
+.hamburger span::before{
+    content: "";
+    position: absolute;
+    border-right: .5rem solid #a044ff;
+    border-top: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+.show-menu .hamburger:hover span{
+    opacity: 1;
+
+}
+
 
 header{
     width:  100%;
@@ -51,7 +126,7 @@ header{
 .banner h1{
     color: #ffffff;
     font-size: 4rem;
-    font-family: "Baloo 2", serif;
+    font-family: var(--font-primary);
     font-weight: 200;
     text-shadow: .3rem .4rem 2px rgba(0,0,0, .4);
     line-height: 3.5rem;
@@ -61,7 +136,7 @@ header{
 
 }
 .banner  p{
-    font-family: "Josefin Sans", serif;
+    font-family: var(--font-secundary);
     color: #fff;
     font-size: 2rem;
     text-shadow: .2rem .2rem rgba(0,0,0, .4);
@@ -71,7 +146,7 @@ header{
     
 }
 .banner button{
-    font-family: "Mulish", serif;
+    font-family: var(--font-action);
     color: #fff;
     text-transform: uppercase;
     letter-spacing: .1rem;
@@ -93,4 +168,66 @@ header{
         transform: translateY(0) rotateY(0);
         opacity: 1;
     }
+}
+.sidebar{
+    width: 20rem;
+    height: 100vh;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    right: -20rem;
+    transition: all 1s;
+
+}
+.show-menu .sidebar{
+    right: 0;
+
+}
+
+.menu{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.menu-item{
+ text-align: center; 
+ margin-bottom: .5rem;  
+}
+
+.menu-link{
+    font-family: var(--font-action);
+    font-size: 2rem;
+    color: #555;
+    transition: color 1s;
+    
+}
+.menu-link:hover{
+    color: #6a3093;
+}
+.social-media{
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    
+}
+
+.social-media i{
+    background-color: #6a3093 ;
+    color: rgba(255,255,255,1);
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 1.4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: background-color 1s ;
+}
+.social-media i:hover{
+    background-color: #a044ff;
+
 }
